--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="workout__details">
             <span class="workout__icon">⏱</span>
             <span class="workout__value">24</span>
-            <span class="workout__unit">min</span>
+            <span class="workout__unit">mins</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⚡️</span>
